--- a/style.css
+++ b/style.css
@@ -93,3 +93,10 @@ button:hover {
 .low-risk {
   color: green;
 }
+
+footer {
+  text-align: center;
+  padding: 10px 0;
+  margin-top: 40px;
+  color: #333;
+}
